Añadí la activity AddCriterio al proyecto y ya cumple con los requerimientos mínimos esperados.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Sistema Seleccionador de Proyectos</string>
+    <string-array name="mejor_array">
+        <item>Menor</item>
+        <item>Mayor</item>
+    </string-array>
 </resources>
